hphp/hack/test/typecheck/reactive/borrowed_as_immutable2.php.exp
File "borrowed_as_immutable2.php", line 6, characters 19-28:
Values returned from reactive function by default are treated as immutable. (Typing[4235])
File "borrowed_as_immutable2.php", line 9, characters 12-16:
This value is mutably borrowed and cannot be returned as immutable
